[project]
name = "weather_risks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "nicegui>=2.9.1",
  "requests-cache>=1.2.1",
  "retry-requests>=2.0.0",
]

[project.scripts]
weather_risks = "weather_risks.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_risks"]


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.6.7",
]

